tests/testcases/valid/control_flow/05_switch_sparse.ciel
// Switch with sparse cases - should use if-else chain

int main() {
    int x = 100;
    int result = 0;

    // Sparse cases - density too low for jump table
    switch (x) {
        case 1: {
            result = 10;
            break;
        }
        case 100: {
            result = 100;
            break;
        }
        case 1000: {
            result = 1000;
            break;
        }
        default: {
            result = 0;
            break;
        }
    }

    return 0;
}
