tests/testcases/invalid/semantic/42_switch_default_no_return.ciel
// Error: switch with default but default doesn't return
int classify(int x) {
    switch (x) {
        case 1:
            return 100;
        case 2:
            return 200;
        default:
            break;  // Error: default doesn't return
    }
}

int main() {
    int result = classify(3);
    return 0;
}
